@@ -1,3 +1,6 @@
+2006-05-25 Aron Griffis <agriffis@gentoo.org>
+	* eviewcvs: Update for sources.gentoo.org, add subversion support
+
 2006-03-08 Paul Varner <fuzzyray@gentoo.org>
 	* genpkgindex: Add binary package indexing utility. (Bug 82132)
 
